--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('https://i.ibb.co/QJwW7krZ/cropped-2037365320230524231421294.jpg');
+    background-image: url('https://imgfy.ru/nxIz6r7MCBvXzXh');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -237,7 +237,6 @@ body::before {
         .unit-icon {
             font-size: 1.8rem;
         }
-        /* Контейнер для колонок 382-го ОБМП с фиксированной высотой и прокруткой */
         .columns-container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
@@ -249,9 +248,9 @@ body::before {
             border-radius: 10px;
             padding: 20px;
             border: 2px solid #d4a762;
-            max-height: 500px; /* Фиксированная высота */
-            overflow-y: auto; /* Вертикальная прокрутка */
-            overflow-x: hidden; /* Горизонтальная прокрутка скрыта */
+            max-height: 500px; 
+            overflow-y: auto; 
+            overflow-x: hidden; 
         }
         .column-section::-webkit-scrollbar {
             width: 8px;
@@ -267,7 +266,7 @@ body::before {
         .column-section::-webkit-scrollbar-thumb:hover {
             background: #8a6d46;
         }
-        /* Стиль для заголовков внутри колонок */
+
         .column-title {
             color: #6b5234;
             font-size: 1.4rem;
