--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
                 
                 <div class="column-section">
-                    <div class="column-title">⚡ ТАНКОВАЯ РОТА</div>
+                    <div class="column-title">⚡ 2-я ТАНКОВАЯ РОТА</div>
                     <div id="tankList"></div>
                 </div>
             </div>
@@ -148,7 +148,7 @@
                             <option value="command">Командование 27-й САД</option>
                             <option value="sap37">37-й Смешанный Авиационный Полк</option>
                             <option value="bmp382">382-й Отдельный батальон Морской Пехоты</option>
-                            <option value="tank">Танковая рота 382-й ОБМП</option>
+                            <option value="tank">2-я Танковая рота 382-й ОБМП</option>
                             <option value="bba94">94-я Батарея Береговой Артиллерии</option>
                             <option value="police">Военная Полиция 27-й САД</option>
                             <option value="senezh">ССО</option>
@@ -408,3 +408,4 @@ const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZ
 </body>
 
 </html>
+
