--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
             
             <div id="adminContent" style="display: none;">
-                <h3>🔐 ПАНЕЛЬ УПРАВЛЕНИЯ ОШС</h3>
+                <h3>🔐 ПАНЕЛЬ УПРАВЛЕНИЯ ПОСЛУЖНЫМ СПИСКОМ</h3>
                 
                 <div class="form-row">
                     <div class="form-group">
@@ -407,5 +407,6 @@ const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZ
 </body>
 
 </html>
+
 
 
