--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             
             <div class="columns-container">
                 <div class="column-section">
-                    <div class="column-title">📋 Штаб и пехотные подразделения</div>
+                    <div class="column-title">📋 Пехота</div>
                     <div id="bmp382List"></div>
                 </div>
                 
@@ -407,6 +407,7 @@ const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZ
 </body>
 
 </html>
+
 
 
 
